--- a/index.html
+++ b/index.html
@@ -97,13 +97,8 @@
       </ul>    
       <img src="images/frame.png" alt="scan by your phone" style="float: left" id="hideme" />  
       <p>Here you can scan my barcode to open this website online.</p>
-      <h4>My ICT Solution Projects</h4>
-      <p><a href="https://thedojosite-5ebd4.web.app/login" target="_blank">Todo Solution</a>&nbsp;||&nbsp;
-      <a href="https://money1234508032023.web.app/" target="_blank">Money Solution</a>   
-      &nbsp;||&nbsp;
-      <a href="https://readinglistapp-c3983.web.app/" target="_blank">Reading Solution</a> 
-       &nbsp;||&nbsp;
-      <a href="https://memory123452023.web.app/" target="_blank">Memory Game</a></p>
+      <h4>My ICT Solution Project</h4>
+      <p><a href="https://projectfull31.web.app/" target="_blank">Money Transactions</a>
     </div>
     <div class="col-sm-4">    
       <span class="glyphicon glyphicon-signal logo"></span><br />
