--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
       <h4>Here is my assessments for the subject Develop ICT Solution. All my works could be shown on the e-learning submission place.</h4>
        <ul>
         <li style="display: inline">
-          <a href="/ictsolution/download/XXXXX Develop ICT Solution Assessment 1.docx" download>Download Assessment One</a>  ||
+          <a href="https://docs.google.com/document/d/1Ss7GhP4WcYNjATJBn3pEUOlDRv0x6iEVqwGsyOef4p4/edit?usp=sharing" target="_blank">My Assesment 1</a>  ||
         </li>
         <li style="display: inline">
           <a href="/ictsolution/download/XXXXX Develop ICT Solution Assessment 2.docx" download>Download Assessment Two</a>  ||
         </li>
         <li style="display: inline">
-          <a href="/ictsolution/download/XXXXX Develop ICT Solution Task 1.pptx" download>Download Security Slide Show</a>   ||
+          <a href="https://docs.google.com/presentation/d/1c5OYC7YK9J51SL_75KesFVo0Ab998GHryFYT4-dyVyI/edit?usp=sharing" target="_blank">My presentation about ICT Security</a>   ||
         </li>
         <li style="display: inline">
           <a href="https://wellsjohn220.github.io/projectwebsite/Demoproject-chart.html" target="_blank">View My Project</a>  ||
