--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
     <div class="col-sm-4">    
       <span class="glyphicon glyphicon-signal logo"></span><br />
        <!-- <a href="#link" class="btn btn-info" role="button">Link Button</a> -->
-       <br><a href="https://forms.gle/ymQvsjmGSew8es3u6" target="blank" class="btn btn-info btn-lg">
+       <br><a href="https://forms.gle/FNzBa6CvsxvHJEvW8" target="blank" class="btn btn-info btn-lg">
         Fill the Feedback Form &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button></a><br />
-      <br><a href="https://docs.google.com/spreadsheets/d/1RDLfwvcBUFqlXlCkB9VUHoqn-nLuQzE3Hp8En_djDhk/edit?usp=sharing" class="btn btn-info btn-lg">
-        View the Feedback Result</button></a><br>     
+      <br><a href="https://docs.google.com/spreadsheets/d/1Pbrgh9bM2suAGLKJTysU6X7D77Nr_nVpptkGsFG9QH8/edit?usp=sharing" class="btn btn-info btn-lg">
+        View the Feedback Results</button></a><br>     
     </div>
   </div>
 </div>
