--- a/index.html
+++ b/index.html
@@ -527,8 +527,8 @@
     <div class="col-sm-5">
       <p>Contact us and we'll get back to you within 24 hours.</p>
       <p><span class="glyphicon glyphicon-map-marker"></span> New South Wales, Australia</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +61 45133523</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+      <p><span class="glyphicon glyphicon-phone"></span> +61 451180501</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> arthurleonard05225@gmail.com</p>
     </div>
     <div class="col-sm-7 slideanim">
       <form name="contact-to-google-sheet">
